[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "provides"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Jeremiah Paige", email = "ucodery@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
keywords = ["packaging", "imports", "modules"]
dynamic = ["description"]

dependencies = [
  "packaging",
]

[project.urls]
Home = "https://github.com/ucodery/provides"

[project.optional-dependencies]
test = ["pytest >= 2.7.3"]
